# cgp

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/cgp/: Cargo.toml
crates/cgp-component-macro/: Cargo.toml
crates/cgp-component-macro/src/: lib.rs
crates/cgp-core/: Cargo.toml
crates/cgp-core/src/: lib.rs  prelude.rs
crates/cgp-dispatch/: Cargo.toml
crates/cgp-dispatch/src/providers/: build_handlers.rs  build_with_handlers.rs  dispatch_fields.rs  dispatch_handlers.rs  match_with_handlers.rs  match_with_handlers_ref.rs  mod.rs
crates/cgp-dispatch/src/providers/builders/: build_and_merge_outputs.rs  build_field.rs  handle_and_build.rs  mod.rs
crates/cgp-dispatch/src/providers/dispatchers/: dispatch_builders.rs  dispatch_matchers.rs  mod.rs
crates/cgp-dispatch/src/providers/extractors/: extract_handle.rs  mod.rs
crates/cgp-dispatch/src/providers/field_builders/: build_and_merge.rs  build_and_set_field.rs
crates/cgp-dispatch/src/providers/field_matchers/: extract_field.rs  extract_first_field.rs  extract_handle.rs  field_value.rs  first_field_value.rs  mod.rs
crates/cgp-dispatch/src/providers/matchers/: match_first_with_field_handlers.rs  match_with_field_handlers.rs  match_with_field_handlers_ref.rs  mod.rs  to_field_handlers.rs  to_first_field_handlers.rs
crates/cgp-dispatch/src/providers/with_handlers/: build_with_handlers.rs  match_first_with_handlers.rs  match_first_with_handlers_mut.rs  match_first_with_handlers_ref.rs  match_with_handlers.rs  match_with_handlers_mut.rs  match_with_handlers_ref.rs  mod.rs
crates/cgp-error/: Cargo.toml
crates/cgp-error-anyhow/: Cargo.toml
crates/cgp-error-anyhow/src/: lib.rs
crates/cgp-error-anyhow/src/impls/: debug_error.rs  display_error.rs  mod.rs  raise_anyhow_error.rs  use_anyhow_error.rs
crates/cgp-error-extra/: Cargo.toml
crates/cgp-error-extra/src/impls/: discard_detail.rs  infallible.rs  panic_error.rs  raise_from.rs  return_error.rs
crates/cgp-error-extra/src/impls/alloc/: debug_error.rs  display_error.rs
crates/cgp-error-eyre/: Cargo.toml
crates/cgp-error-eyre/src/: lib.rs
crates/cgp-error-eyre/src/impls/: debug_error.rs  display_error.rs  mod.rs  raise_eyre_error.rs  use_eyre_error.rs
crates/cgp-error/src/: can_raise_error.rs  has_error_type.rs  lib.rs
crates/cgp-error/src/impls/: debug_error.rs  discard_detail.rs  display_error.rs  infallible.rs  mod.rs  panic_error.rs  raise_from.rs  return_error.rs
crates/cgp-error/src/traits/: can_raise_error.rs  can_wrap_error.rs  has_async_error_type.rs  has_error_type.rs  mod.rs
crates/cgp-extra/: Cargo.toml
crates/cgp-extra/src/: lib.rs  prelude.rs
crates/cgp-field/: Cargo.toml
crates/cgp-field-macro-lib/: Cargo.toml
crates/cgp-field-macro-lib/src/: field.rs  lib.rs
crates/cgp-field-macro-lib/src/tests/: product.rs
crates/cgp-field-macro-lib/src/tests/helper/: format.rs
crates/cgp-field/src/: lib.rs
crates/cgp-field/src/impls/: build_default.rs  build_from.rs  cast.rs  chain.rs  mod.rs  use_field.rs  use_ref.rs
crates/cgp-field/src/traits/: build_field.rs  extract_field.rs  format.rs  from_fields.rs  from_variant.rs  has_field.rs  has_field_mut.rs  map_field.rs  map_fields.rs  map_type.rs  map_type_ref.rs  match_str.rs  mod.rs  static_format.rs  static_string.rs  take_field.rs  to_fields.rs  transform_map.rs  update_field.rs
crates/cgp-field/src/types/: char.rs  field.rs  index.rs  mod.rs  product.rs  sum.rs
crates/cgp-handler/: Cargo.toml
crates/cgp-handler/src/: lib.rs  types.rs
crates/cgp-handler/src/components/: async_computer.rs  compute.rs  handler.rs  mod.rs  produce.rs  try_compute.rs
crates/cgp-handler/src/providers/: compose.rs  field.rs  mod.rs  pipe.rs  promote.rs  promote_all.rs  promote_async.rs  promote_ref.rs  return_input.rs  try_promote.rs
crates/cgp-inner/: Cargo.toml
crates/cgp-inner/src/: lib.rs
crates/cgp-monad/: Cargo.toml
crates/cgp-monad/src/monadic/: err.rs  ident.rs  ok.rs
crates/cgp-monad/src/providers/: pipe_monadic.rs
crates/cgp-monad/src/traits/: compose.rs  mod.rs
crates/cgp-run/: Cargo.toml
crates/cgp-run/src/: lib.rs
crates/cgp-runtime/: Cargo.toml
crates/cgp-runtime/src/: lib.rs
crates/cgp-runtime/src/traits/: has_async_runtime.rs  has_runtime.rs  has_runtime_type.rs  mod.rs
crates/cgp-tests/: Cargo.toml
crates/cgp-tests/src/tests/: check_components.rs  compose.rs  delegate_and_check_components.rs  mod.rs  symbol.rs
crates/cgp-tests/src/tests/async/: spawn.rs
crates/cgp-tests/src/tests/builder/: basic.rs  generics.rs  index.rs  mod.rs  person.rs  point.rs
crates/cgp-tests/src/tests/cgp_component/: constant.rs  lifetime.rs  mod.rs  sized.rs
crates/cgp-tests/src/tests/delegate_components/: direct.rs  mod.rs  new_struct.rs
crates/cgp-tests/src/tests/extractor/: basic.rs  generic.rs  mod.rs  shape.rs  shape_ref.rs
crates/cgp-tests/src/tests/getter/: abstract_type.rs  clone.rs  mod.rs  mref.rs  option.rs  slice.rs  string.rs
crates/cgp-tests/src/tests/handler/: computer_macro.rs  handler_macro.rs  mod.rs  pipe.rs  producer_macro.rs
crates/cgp-tests/src/tests/has_field/: chain.rs  mod.rs
crates/cgp-tests/src/tests/has_fields/: enum_fields.rs  struct_fields.rs
crates/cgp-tests/src/tests/monad/: err.rs
crates/cgp-tests/src/tests/preset/: mod.rs
crates/cgp-tests/tests/component_tests/: mod.rs
crates/cgp-tests/tests/dispatcher_macro_tests/: async_generics.rs  async_multi_args.rs  async_multi_args_owned_self.rs  async_multi_args_ref.rs  async_self_mut_only.rs  async_self_only.rs  async_self_ref_only.rs  generics.rs  mod.rs  multi_args.rs  multi_args_owned_self.rs  multi_args_ref.rs  multi_methods.rs  self_mut_only.rs  self_only.rs  self_ref_only.rs  self_ref_return_explicit_ref.rs  self_ref_return_implicit_ref.rs  shape.rs
crates/cgp-tests/tests/handler_tests/: computer_macro.rs  handler_macro.rs  pipe.rs
crates/cgp-type/: Cargo.toml
crates/cgp-type/src/: lib.rs
crates/cgp-type/src/impls/: use_delegated_type.rs  use_type.rs
crates/cgp-type/src/traits/: has_type.rs  mod.rs
crates/cgp/src/: lib.rs
(+271 files in other folders)
