[workspace]

resolver = "2"

members = [
    "crates/cgp",
    "crates/cgp-core",
    "crates/cgp-extra",
    "crates/cgp-async",
    "crates/cgp-async-macro",
    "crates/cgp-sync",
    "crates/cgp-component",
    "crates/cgp-macro",
    "crates/cgp-macro-lib",
    "crates/cgp-type",
    "crates/cgp-field",
    "crates/cgp-error",
    "crates/cgp-error-extra",
    "crates/cgp-error-anyhow",
    "crates/cgp-error-eyre",
    "crates/cgp-error-std",
    "crates/cgp-run",
    "crates/cgp-runtime",
    "crates/cgp-inner",
]

[workspace.package]
rust-version    = "1.81"
edition         = "2021"
license         = "Apache-2.0"
repository      = "https://github.com/contextgeneric/cgp"
authors         = ["Informal Systems <hello@informal.systems>", "Soares Chen <soares.chen@maybevoid.com>"]
keywords        = ["cgp"]

[patch.crates-io]
cgp                         = { path = "./crates/cgp" }
cgp-core                    = { path = "./crates/cgp-core" }
cgp-extra                   = { path = "./crates/cgp-extra" }
cgp-async                   = { path = "./crates/cgp-async" }
cgp-async-macro             = { path = "./crates/cgp-async-macro" }
cgp-sync                    = { path = "./crates/cgp-sync" }
cgp-component               = { path = "./crates/cgp-component" }
cgp-macro                   = { path = "./crates/cgp-macro" }
cgp-macro-lib               = { path = "./crates/cgp-macro-lib" }
cgp-type                    = { path = "./crates/cgp-type" }
cgp-field                   = { path = "./crates/cgp-field" }
cgp-error                   = { path = "./crates/cgp-error" }
cgp-error-extra             = { path = "./crates/cgp-error-extra" }
cgp-run                     = { path = "./crates/cgp-run" }
cgp-runtime                 = { path = "./crates/cgp-runtime" }
cgp-inner                   = { path = "./crates/cgp-inner" }
