[workspace]

resolver = "2"

members = [
    "crates/cgp",
    "crates/cgp-core",
    "crates/cgp-extra",
    "crates/cgp-async-macro",
    "crates/cgp-component",
    "crates/cgp-macro",
    "crates/cgp-macro-lib",
    "crates/cgp-type",
    "crates/cgp-field",
    "crates/cgp-field-extra",
    "crates/cgp-error",
    "crates/cgp-error-extra",
    "crates/cgp-error-anyhow",
    "crates/cgp-error-eyre",
    "crates/cgp-error-std",
    "crates/cgp-extra-macro",
    "crates/cgp-extra-macro-lib",
    "crates/cgp-handler",
    "crates/cgp-monad",
    "crates/cgp-dispatch",
    "crates/cgp-run",
    "crates/cgp-runtime",
    "crates/cgp-inner",
    "crates/cgp-tests",
]

[workspace.package]
rust-version    = "1.87"
edition         = "2021"
license         = "Apache-2.0"
repository      = "https://github.com/contextgeneric/cgp"
authors         = ["Soares Chen <soares.chen@maybevoid.com>"]
keywords        = ["cgp"]

[patch.crates-io]
cgp                         = { path = "./crates/cgp" }
cgp-core                    = { path = "./crates/cgp-core" }
cgp-extra                   = { path = "./crates/cgp-extra" }
cgp-async-macro             = { path = "./crates/cgp-async-macro" }
cgp-component               = { path = "./crates/cgp-component" }
cgp-macro                   = { path = "./crates/cgp-macro" }
cgp-macro-lib               = { path = "./crates/cgp-macro-lib" }
cgp-type                    = { path = "./crates/cgp-type" }
cgp-field                   = { path = "./crates/cgp-field" }
cgp-field-extra             = { path = "./crates/cgp-field-extra" }
cgp-error                   = { path = "./crates/cgp-error" }
cgp-error-extra             = { path = "./crates/cgp-error-extra" }
cgp-extra-macro             = { path = "./crates/cgp-extra-macro" }
cgp-extra-macro-lib         = { path = "./crates/cgp-extra-macro-lib" }
cgp-handler                 = { path = "./crates/cgp-handler" }
cgp-monad                   = { path = "./crates/cgp-monad" }
cgp-dispatch                = { path = "./crates/cgp-dispatch" }
cgp-run                     = { path = "./crates/cgp-run" }
cgp-runtime                 = { path = "./crates/cgp-runtime" }
cgp-inner                   = { path = "./crates/cgp-inner" }
