[package]
name         = "cgp-core"
version      = "0.4.2-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming core traits
"""

[features]
default             = [ "full" ]
full                = [ "cgp-async/full" ]

[dependencies]
cgp-async           = { version = "0.4.2-alpha", default-features = false }
cgp-component       = { version = "0.4.2-alpha" }
cgp-macro           = { version = "0.4.2-alpha" }
cgp-type            = { version = "0.4.2-alpha" }
cgp-error           = { version = "0.4.2-alpha" }
cgp-field           = { version = "0.4.2-alpha" }