[package]
name         = "cgp-core"
version      = "0.5.0-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming core traits
"""

[dependencies]
cgp-async-macro     = { version = "0.5.0-alpha" }
cgp-component       = { version = "0.5.0-alpha" }
cgp-macro           = { version = "0.5.0-alpha" }
cgp-type            = { version = "0.5.0-alpha" }
cgp-error           = { version = "0.5.0-alpha" }
cgp-field           = { version = "0.5.0-alpha" }
