[package]
name         = "cgp-dispatch"
version      = "0.5.0-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Extensible data type dispatchers for CGP handlers"

[dependencies]
cgp-core    = { version = "0.5.0-alpha" }
cgp-monad   = { version = "0.5.0-alpha" }
cgp-handler = { version = "0.5.0-alpha" }
