[package]
name         = "cgp-extra"
version      = "0.4.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming extra meta-crate
"""
[features]
default = [ "full" ]
full = [ "cgp-error-extra/alloc" ]

[dependencies]
cgp-core        = { version = "0.4.1" }
cgp-error-extra = { version = "0.4.1", default-features = false }
cgp-inner       = { version = "0.4.1" }
cgp-run         = { version = "0.4.1" }
cgp-runtime     = { version = "0.4.1" }
cgp-handler     = { version = "0.4.1" }
cgp-dispatch    = { version = "0.4.1" }
