[package]
name         = "cgp-extra"
version      = "0.5.0-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming extra meta-crate
"""
[features]
default = [ "full" ]
full = [ "cgp-error-extra/alloc" ]

[dependencies]
cgp-core        = { version = "0.5.0-alpha" }
cgp-extra-macro = { version = "0.5.0-alpha" }
cgp-error-extra = { version = "0.5.0-alpha", default-features = false }
cgp-inner       = { version = "0.5.0-alpha" }
cgp-run         = { version = "0.5.0-alpha" }
cgp-runtime     = { version = "0.5.0-alpha" }
cgp-handler     = { version = "0.5.0-alpha" }
cgp-monad       = { version = "0.5.0-alpha" }
cgp-dispatch    = { version = "0.5.0-alpha" }
