[package]
name         = "cgp-field-macro-lib"
version      = "0.3.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming field macros as a library
"""

[dependencies]
syn             = { version = "2.0.95", features = [ "full" ] }
quote           = "1.0.38"
proc-macro2     = "1.0.92"
prettyplease    = "0.2.27"
