[package]
name         = "cgp-field"
version      = "0.5.0-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming field traits
"""

[dependencies]
cgp-component       = { version = "0.5.0-alpha" }
cgp-macro           = { version = "0.5.0-alpha" }
cgp-type            = { version = "0.5.0-alpha" }
