[package]
name         = "cgp-handler"
version      = "0.4.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[dependencies]
cgp-core    = { version = "0.4.0", default-features = false }
