[package]
name         = "cgp-inner"
version      = "0.4.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming inner component
"""

[dependencies]
cgp-component       = { version = "0.4.1" }
cgp-macro = { version = "0.4.1" }