[package]
name         = "cgp-monad"
version      = "0.5.0-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Monadic constructs for CGP computation"

[dependencies]
cgp-core    = { version = "0.5.0-alpha" }
cgp-handler = { version = "0.5.0-alpha" }
