[package]
name         = "cgp-run"
version      = "0.4.2-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming runner component
"""

[dependencies]
cgp-async           = { version = "0.4.2-alpha", default-features = false }
cgp-error           = { version = "0.4.2-alpha" }
cgp-component       = { version = "0.4.2-alpha" }
cgp-macro           = { version = "0.4.2-alpha" }