[package]
name         = "cgp-tests"
version      = "0.4.1-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming meta crate
"""

[dependencies]
cgp     = { version = "0.4.1-alpha", default-features = false }
futures = { version = "0.3.31" }
