[package]
name         = "cgp-type"
version      = "0.4.1-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming core component traits
"""

[dependencies]
cgp-component       = { version = "0.4.1-alpha" }
cgp-macro = { version = "0.4.1-alpha" }
