[package]
name         = "cgp"
version      = "0.3.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming meta crate
"""

[features]
default             = [ "full" ]
full                = [ "cgp-core/full", "cgp-extra/full" ]
provider-supertrait = [ "cgp-core/provider-supertrait" ]

[dependencies]
cgp-async      = { version = "0.3.0", default-features = false }
cgp-core       = { version = "0.3.1", default-features = false }
cgp-extra      = { version = "0.3.0", default-features = false }