[package]
name         = "cgp"
version      = "0.4.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
readme       = "./README.md"
description  = """
    Main crate for using context-generic programming
"""

[features]
default             = [ "full" ]
full                = [ "cgp-core/full", "cgp-extra/full" ]

[dependencies]
cgp-async      = { version = "0.4.1", default-features = false }
cgp-core       = { version = "0.4.1", default-features = false }
cgp-extra      = { version = "0.4.1", default-features = false }
