[package]
name         = "cgp"
version      = "0.5.0-alpha"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
readme       = "./README.md"
description  = """
    Main crate for using context-generic programming
"""

[dependencies]
cgp-core       = { version = "0.5.0-alpha", default-features = false }
cgp-extra      = { version = "0.5.0-alpha", default-features = false }
